--- a/valentine/index.html
+++ b/valentine/index.html
@@ -52,6 +52,8 @@
             <div class="text">
                 <div class="date">2019.9.30</div>
                 我们第一次约会的日子
+                没想到30多公里的🚇
+                即将成为日常
             </div>
         </div>
         <div class="section">
