--- a/valentine/index.html
+++ b/valentine/index.html
@@ -145,7 +145,7 @@
         </div>
     </div>
     <div id="audioBox">
-        <audio data-src="../bgm.mp3" data-autoplay loop id="audio"></audio>
+        <audio src="../bgm.mp3" data-autoplay loop id="audio"></audio>
     </div>
     <script>
         $(document).ready(function () {
