--- a/valentine/index.html
+++ b/valentine/index.html
@@ -51,8 +51,8 @@
         <div class="section">
             <div class="text">
                 <div class="date">2019.9.30</div>
-                我们第一次约会的日子
-                没想到30多公里的🚇
+                我们第一次约会的日子<br>
+                没想到30多公里的🚇<br>
                 即将成为日常
             </div>
         </div>
