timer change title

--- a/timer/index.html
+++ b/timer/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>给杨涵宝宝的情书~</title>
+    <title>跟小羊在一起的日子</title>
 
     <!-- <link rel="stylesheet" href="css/reset.css" /> -->
     <!-- <link rel="stylesheet" href="css/animate.min.css" /> -->
